added some main dic generation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cheerio": "^1.1.2",
+    "pinyin-to-zhuyin": "git@github.com:logicmason/pinyin-zhuyin.git",
     "pinyin-tone-tool": "^1.0.1",
     "yomichan-dict-builder": "^2.10.0"
   }
