[Hanyu7] changed some css (for the readings)

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 /build
 /data/mdx-guifan-2/img
+styles-guifan-pinyin.css
+styles-guifan-zhuyin.css
+styles-hanyu7-pinyin.css
+styles-hanyu7-zhuyin.css
